# aa-structures

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_settings.md  codecov.yml  pyproject.toml  setup.py  starbases_raw_2001.json  tox.ini
.tx/: config
docs/: conf.py  index.rst  operations.md  requirements.txt
locale/de/LC_MESSAGES/: django.mo  django.po
structures/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  checks.py  constants.py  evelinks.py  forms.py  helpers.py  managers.py  models.py  providers.py  signals.py  swagger.json  swagger.json:Zone.Identifier  tasks.py  tests.py  urls.py  utils.py  views.py
structures/core/: notification_embeds.py  notification_timers.py  notification_types.py  output_formatter.py  serializers.py  sovereignty.py  starbases.py  webhooks.py
structures/core/notification_embeds/: __init__.py  billing_embeds.py  character_embeds.py  helpers.py  main.py  moonmining_embeds.py  orbital_embeds.py  sov_embeds.py  structures_embeds.py  tower_embeds.py  war_embeds.py
structures/helpers/: esi_fetch.py  eveonline.py  general.py  test_esi_fetch.py  urls.py
structures/locale/: django.pot
structures/locale/de/LC_MESSAGES/: django.mo  django.po
structures/locale/en/LC_MESSAGES/: django.po
structures/locale/es/LC_MESSAGES/: django.mo  django.po
structures/locale/fr_FR/LC_MESSAGES/: django.po
structures/locale/it_IT/LC_MESSAGES/: django.po
structures/locale/ja/LC_MESSAGES/: django.po
structures/locale/ko/LC_MESSAGES/: django.mo  django.po
structures/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
structures/locale/ru/LC_MESSAGES/: django.mo  django.po
structures/locale/uk/LC_MESSAGES/: django.mo  django.po
structures/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
structures/management/commands/: structures_load_eve.py  structures_load_structures.py  structures_preload_eveuniverse.py  structures_purgeall.py  structures_update_poco_planets.py  structures_updatesde.py
structures/migrations/: 0001_initial.py  0001_initial_new.py  0002_auto_20191117_0004.py  0002_auto_20191117_1346.py  0002_auto_20191120_0033.py  0002_auto_20191121_2335.py  0002_remove_eveuniverse_relation_names.py  0003_add_localization.py  0003_add_localization_and_unique_key.py  0003_auto_20191117_2143.py  0003_auto_20191120_0121.py  0003_auto_20191125_2157.py  0004_auto_20191120_0131.py  0004_auto_20191129_0308.py  0004_improve_localization.py  0004_webhook_is_active.py  0005_auto_20191118_1612.py  0005_auto_20191120_0154.py  0005_notification_created.py  0006_auto_20191118_2238.py  0006_auto_20200119_1533.py  0006_auto_20200120_0147.py  0006_remove_profile_is_default.py  0007_auto_20200123_0026.py  0007_auto_20200123_1429.py  0007_remove_structure_profile_id.py  0008_auto_20191118_2241.py  0008_auto_20200204_0104.py  0008_auto_20200204_1426.py  0008_auto_20200208_1456.py  0008_auto_20200209_1638.py  0009_auto_20191118_2311.py  0009_auto_20200204_1907.py  0009_auto_20200309_2153.py  0009_auto_20200312_1301.py  0009_localization.py  0009_localizations.py  0010_auto_20191119_0049.py  0010_sovereignty_map.py  0011_last_online.py  (+109 more)
structures/models/: __init__.py  eveuniverse.py  notifications.py  owner.py  owners.py  structures.py  structures_1.py  structures_2.py
structures/static/structures/: global.css  index.css  structure_list.css  structure_list.js
structures/static/structures/css/: global.css  main.css
structures/templates/structures/: base.html  index.html  main.html  menu.html  structure_fit.html  structure_list.html  structures.html
structures/templates/structures/modals/: fitting_asset.html  fitting_assets.html  (+7 more)
structures/templatetags/: filters.py  structures.py
structures/testdata/: corp_structures.json  entities.json  generate_notifications.py  generate_structures.py  load_test_notifications.py  notifications.json  td_notifications.json  td_notifications_2.json  universe_structures.json
structures/tests/: __init__.py  my_test_data.py  test_admin.py  test_app_settings.py  test_auth_utils_2.py  test_checks.py  test_commands.py  test_core_webhooks.py  test_helpers.py  test_integration.py  test_managers.py  test_managers_1.py  test_managers_2.py  test_managers_3.py  test_models.py  test_signals.py  test_tasks.py  test_utils.py  test_views.py
structures/tests/core/: test_notification_embeds.py  test_notification_embeds_2.py  test_notification_structuretimers.py  test_notification_types.py  test_notifications_timerboard.py  test_serializers.py  test_sovereignty.py  test_starbases.py
structures/tests/models/: test_eveuniverse.py  test_notifications.py  test_notifications_1.py  test_notifications_2.py  test_notifications_3.py  test_notifications_discord.py  test_notifications_structuretimers.py  test_notifications_timerboard.py  test_owners.py  test_owners_1.py  test_owners_2.py  test_owners_3.py  test_owners_4.py  test_structures.py
structures/tests/testdata/: __init__.py  corp_assets.json  corp_customs_offices.json  corp_structures.json  create_eveuniverse.py  entities.json  esi_client_stub.py  esi_data.json  eveuniverse.json  factories.py  factories_2.py  generate_notifications.py  generate_notifications_2.py  generate_structures.py  helpers.py  load_eveuniverse.py  notifications.json  tasks_loadtest.py  td_notifications_2.json  test_generate_structures.py  universe_structures.json
structures/webhooks/: core.py  managers.py  models.py  utils.py
structures/webhooks/tests/: test_core.py  test_utils.py
testauth/: settings.py  settings_all.py  settings_core.py  urls.py
tests/testauth/: settings.py
(+11 files in other folders)
